--- a/bot.yml
+++ b/bot.yml
@@ -2,7 +2,11 @@ name: nodebot
 description: A simple node.js starter bot for Beep Boop
 avatar: resources/avatar.png
 #background: resources/background.png
-#config:
+config:
+- name: API_KEY
+  friendly_name: api key
+  info: this is the firebase api key
+  type: secret
 #  - name: OPTION
 #    friendly_name: Some Unnecessary Option
 #    info: This is an unnecessary option
